fix(modal & tabs): remove overflow property that causes unnecessary scrollbars and update to Node 22 (#827)
* fix(modal): remove overflow property that causes unnecessary scrollbars

* fix(modal): update supported node version, yarn and docs

* fix(modal): fix node 22 import assertion syntax

* fix(modal): update changelog

* fix(tabs): update readme for node 22

--- a/packages/pharos/src/components/modal/pharos-modal.scss
+++ b/packages/pharos/src/components/modal/pharos-modal.scss
@@ -95,7 +95,6 @@
   flex-direction: column;
   height: 100%;
   pointer-events: auto;
-  overflow-y: scroll;
   background-color: var(--pharos-modal-color-background-content);
   background-clip: padding-box;
   border-radius: var(--pharos-radius-base-standard);
